--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="l-g4wLIKrROeA-nAcZkmIL8xWnkfLB_3LQeGM6juwAo" />
     <title>tiktok-audience-estimator-web</title>
   </head>
   <body>
