Feat: SEO Optimization and Content Expansion

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="l-g4wLIKrROeA-nAcZkmIL8xWnkfLB_3LQeGM6juwAo" />
-    <title>tiktok-audience-estimator-web</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="l-g4wLIKrROeA-nAcZkmIL8xWnkfLB_3LQeGM6juwAo" />
+  <meta name="description"
+    content="Estimate TikTok audience demographics, gender, age, and user intent for free. Unlock powerful insights to grow your reach with our heuristic analytics tool." />
+  <title>TikTok Audience Demographics Estimator | Free Analytics & Insights</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
